# opentelemetry-ecosystem-explorer

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  CONTRIBUTING.md  README.md  ecosystem-explorer-v1-design-brief.md  ecosystem-explorer-v1-mockups.html  netlify.toml  package.json  pyproject.toml
.github/: copilot-instructions.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/instructions/: github-actions.instructions.md  python-watchers.instructions.md  registry.instructions.md  typescript-frontend.instructions.md
.github/scripts/: build-screenshots-comment.py
.github/workflows/: build-and-test.yml  build-explorer-database.yml  codeql.yml  db-builder-integration.yml  issue-management-feedback-label.yml  issue-management-stale-action.yml  markdown-lint.yml  nightly-declarative-config-test.yml  nightly-registry-update.yml  regenerate-collector-registry.yml  reusable-workflow-notification.yml  scorecard.yml  screenshots-baseline.yml  screenshots-capture.yml  screenshots-cleanup.yml  screenshots-commit.yml  survey-on-merged-pr.yml  zizmor.yml
acceptance-tests/declarative-config-acceptance/: docker-compose.yml  oats.yaml
docs/: AGENT_READINESS.md  README.md  architecture-overview.md  content-addressed-storage.md  frontend-architecture.md  registry-structure.md  screenshots-workflow.md  seo-and-agent-delivery.md  watchers-registry-consumers.md
ecosystem-automation/: AGENTS.md  README.md
ecosystem-automation/collector-watcher/: README.md
ecosystem-automation/collector-watcher/tests/: test_collector_sync.py  test_deprecation_detector.py  test_inventory.py  test_readme_scanner.py
ecosystem-automation/configuration-watcher/: README.md
ecosystem-automation/explorer-db-builder/: README.md  pyproject.toml
ecosystem-automation/explorer-db-builder/src/explorer_db_builder/: collector_builder.py  collector_database_writer.py  collector_display_name_audit.py  collector_transformer.py  database_writer.py  declarative_name_corrections.py  instrumentation_transformer.py  main.py
ecosystem-automation/explorer-db-builder/tests/: test_collector_builder.py  test_collector_database_writer.py  test_collector_display_name_audit.py  test_collector_transformer.py  test_database_writer.py  test_declarative_name_corrections.py  test_instrumentation_transformer.py  test_main.py
ecosystem-automation/golang-instrumentation-watcher/: .gitignore  Makefile  README.md  go.mod  go.sum
ecosystem-automation/golang-instrumentation-watcher/conf/: env.go  env_test.go  log.go  log_test.go
ecosystem-automation/golang-instrumentation-watcher/instrumentation/: README.md  library.go  library_test.go  metadata.go  metadata_test.go  parser.go  schema.go  version.go  version_test.go  walker.go  walker_test.go
ecosystem-automation/golang-instrumentation-watcher/inventory/: hash.go  hash_test.go  manager.go  manager_test.go  version.go  version_test.go
ecosystem-automation/golang-instrumentation-watcher/metadata/: metadata.go
ecosystem-automation/golang-instrumentation-watcher/repo/: repo.go  repo_test.go
ecosystem-automation/java-instrumentation-watcher/: README.md
ecosystem-automation/java-instrumentation-watcher/tests/: test_instrumentation_parser.py  test_instrumentation_sync.py  test_inventory_manager.py  test_java_instrumentation_client.py  test_readme_extractor.py
ecosystem-automation/js-instrumentation-watcher/: README.md  pyproject.toml
ecosystem-automation/js-instrumentation-watcher/src/js_instrumentation_watcher/: __init__.py  __main__.py  instrumentation_sync.py  inventory_manager.py  main.py  package_parser.py  package_scanner.py  repository_manager.py
ecosystem-automation/js-instrumentation-watcher/tests/: __init__.py  test_inventory_manager.py  test_package_parser.py  test_package_scanner.py
ecosystem-automation/v1-registry-sync/: pyproject.toml
ecosystem-automation/v1-registry-sync/tests/: test_reader.py  test_reporter.py
ecosystem-automation/watcher-common/: pyproject.toml
ecosystem-automation/watcher-common/src/watcher_common/: content_hashing.py  inventory_manager.py
ecosystem-automation/watcher-common/tests/: __init__.py  test_content_hashing.py
ecosystem-explorer/: .env.development  .env.test  AGENTS.md  DESIGN.md  DESIGN_V1.md  README.md  index.html  package.json  vite.config.ts
ecosystem-explorer/netlify/edge-functions/: agent-negotiation.ts
ecosystem-explorer/public/schemas/: javaagent-instrumentation.schema.json
ecosystem-explorer/scripts/: aggregate-configurations.mjs  diff-screenshots.mjs  generate-agent-docs.mjs  generate-seo.mjs  generate-test-config.mjs  take-screenshots.mjs
ecosystem-explorer/src/: App.test.tsx  App.tsx  LegacyApp.tsx  faro.ts  index.css  main.tsx  theme-context.test.tsx  theme-context.tsx  themes.test.ts  themes.ts
ecosystem-explorer/src/hooks/: configuration-builder-reducer.test.ts  configuration-builder-reducer.ts  use-collector-data.ts  use-configuration-builder.test.ts  use-configuration-builder.ts  use-customization-status.test.ts  use-customization-status.ts  use-customized-modules.test.ts  use-customized-modules.ts  use-debounced-value.test.ts  use-debounced-value.ts  use-latest-java-agent-version.test.ts  use-latest-java-agent-version.ts  use-overridden-modules.ts  (+3 more)
ecosystem-registry/collector/: deprecations.yaml
projects/: _index.md  frontmatter.schema.json
projects/154-genai-ecosystem/: 00-research.md  NEXT-STEPS.md  _index.md
projects/461-license-tags-research/: 00-research.md  _index.md
projects/84-ui-ux-design/: 00-foundation-audit.md  00-foundation.md  01-home-page.md  02-ecosystem-landing.md  03-list-page.md  04-detail-page.md  NEXT-STEPS.md  _index.md  ecosystem-explorer-v1-design-brief.md  ecosystem-explorer-v1-mockups.html
projects/9-javascript-instrumentation/: 01-metadata-audit.md  02-telemetry-coverage.md  NEXT-STEPS.md  _index.md
projects/ux-research-and-info-arc/: comp-analysis.md  project-approach.md  research-plan.md  user-interview-discussion-guide.md
scripts/: add_copyright.py  check_copyright.py
(+1516 files in other folders)
