[project]
name = "opentelemetry-ecosystem-explorer"
version = "0.1.0"
description = "Project for exploring the OpenTelemetry ecosystem"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "collector-watcher",
    "configuration-watcher",
    "java-instrumentation-watcher",
    "dotnet-instrumentation-watcher",
    "explorer-db-builder",
    "v1-registry-sync",
]

[tool.uv.workspace]
members = [
    "ecosystem-automation/*",
]

[tool.uv.sources]
collector-watcher = { workspace = true }
configuration-watcher = { workspace = true }
java-instrumentation-watcher = { workspace = true }
dotnet-instrumentation-watcher = { workspace = true }
explorer-db-builder = { workspace = true }
v1-registry-sync = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "S"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["ecosystem-automation"]
python_files = ["test_*.py", "*_test.py"]
