[project]
name = "opentelemetry-ecosystem-explorer"
version = "0.1.0"
description = "Project for exploring the OpenTelemetry ecosystem"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "collector-watcher",
    "configuration-watcher",
    "java-instrumentation-watcher",
    "dotnet-instrumentation-watcher",
    "explorer-db-builder",
    "v1-registry-sync",
    "js-instrumentation-watcher",
]

[tool.uv.workspace]
members = [
    "ecosystem-automation/*",
]
exclude = [
    "ecosystem-automation/golang-instrumentation-watcher",
]

[tool.uv.sources]
collector-watcher = { workspace = true }
configuration-watcher = { workspace = true }
java-instrumentation-watcher = { workspace = true }
dotnet-instrumentation-watcher = { workspace = true }
explorer-db-builder = { workspace = true }
v1-registry-sync = { workspace = true }
js-instrumentation-watcher = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "S"]

[tool.ruff.lint.per-file-ignores]
# These files invoke git via subprocess with statically-typed, internally-controlled
# arguments; S603 produces only false positives for them.
"ecosystem-automation/watcher-common/src/watcher_common/repository_manager.py" = ["S603"]
"ecosystem-automation/watcher-common/src/watcher_common/version_detector.py" = ["S603"]
"ecosystem-automation/watcher-common/src/watcher_common/testing.py" = ["S603"]
"ecosystem-automation/configuration-watcher/src/configuration_watcher/repository_manager.py" = ["S603"]
# pytest uses assert as its primary assertion mechanism; S101 is not meaningful here.
# Tests also use fake/hardcoded credentials as fixtures (e.g. a dummy GitHub token), so the
# hardcoded-secret rules (S105/S106/S107) are noise rather than real findings here.
"ecosystem-automation/**/tests/*.py" = ["S101", "S105", "S106", "S107"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["ecosystem-automation"]
python_files = ["test_*.py", "*_test.py"]
