[project]
name = "explorer-db-builder"
version = "0.1.0"
description = "Automation tool for building a content addressed database for the explorer."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
    "semantic-version>=2.10.0",
    "collector-watcher",
    "watcher-common",
]

[tool.uv.sources]
collector-watcher = { workspace = true }
watcher-common = { workspace = true }

[project.scripts]
explorer-db-builder = "explorer_db_builder.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/explorer_db_builder"]