# Copyright The OpenTelemetry Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "js-instrumentation-watcher"
version = "0.1.0"
description = "Automation tool for watching and collecting OpenTelemetry JavaScript instrumentation metadata"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
    "watcher-common",
]

[project.scripts]
js-instrumentation-watcher = "js_instrumentation_watcher.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
watcher-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/js_instrumentation_watcher"]
